--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,2 +1,11 @@
 # This file explains about various stages needed  in this project
 
+stages:
+  load_data:
+    cmd: python src/load_data.py --config=params.yaml
+    deps:
+    - src/get_data.py
+    - src/load_data.py
+    - data_given/winequality.csv
+    outs:
+    - data/raw/winequality.csv
