--- a/params.yaml
+++ b/params.yaml
@@ -20,14 +20,14 @@ split_data:
 estimators:
   ElasticNet:
     params:
-      alpha: 0.88
-      l1_ratio: 0.89
-      # alpha: 0.9
-      # l1_ratio: 0.4
+      # alpha: 0.88
+      # l1_ratio: 0.89
+      alpha: 0.9
+      l1_ratio: 0.4
 model_dir: saved_models
 
 reports:
   params: report/params.json
   scores: report/scores.json
 
-webapp_model_dir: saved_models/model.joblib
+webapp_model_dir: prediction_service/model/model.joblib
