--- a/params.yaml
+++ b/params.yaml
@@ -1,5 +1,3 @@
-# This file contains all the parameters required to run this project
-
 base:
   project: winequality-project
   random_state: 42
@@ -8,7 +6,6 @@ base:
 data_source:
   s3_source: data_given/winequality.csv
 
-#taking the data from data_source and putting it in load_data in the raw format.
 load_data:
   raw_dataset_csv: data/raw/winequality.csv
 
@@ -24,6 +21,8 @@ estimators:
       # l1_ratio: 0.89
       alpha: 0.9
       l1_ratio: 0.4
+      # alpha: 0.5
+      # l1_ratio: 0.5
 model_dir: saved_models
 
 reports:
@@ -31,3 +30,10 @@ reports:
   scores: report/scores.json
 
 webapp_model_dir: prediction_service/model/model.joblib
+
+mlflow_config:
+  artifacts_dir: artifacts
+  experiment_name: ElasticNet regression
+  run_name: mlops
+  registered_model_name: ElasticNetWineModel
+  remote_server_uri: http://0.0.0.0:1234
